--- a/README
+++ b/README
@@ -2,12 +2,22 @@ Das Repo zum WikiMap (Wikipedia Mindmap). Projektverwaltung findet im Redmine st
 
 Kurze Erklärung zu der Ordnerhierarchie: 
 
-/app/  -   hier liegt die eigentliche Anwendung. Strukturiert in der MVC-Architektur !
-/app/lib/   -   Der Platz für verwendete Module
-/app/db/		-		Konfiguration der Datenbank und Migrationen
-/app/controllers/		-		ApplicationController und alle ModellController
-/app/models/		-		Alle Modelle
-/app/views/			- 	Alle Views
-/prototypes/  -   Hier liegen Beispiele die mit Shoes zu Demonstrationszwecken erstellt wurden!
-/test/ -    Hier kommen die ganzen Tests rein!
+/app/  				-   hier liegt die eigentliche Anwendung. Strukturiert in der MVC-Architektur !
+/app/libs/   		-   Der Platz für verwendete Bibliotheken.
+/app/controllers/	-	Alle Controller die für die Kontrolle des Programmflusses.
+/app/views/			- 	Alle Views von Shoes.
+/doc/				-	Die Dokumentation von WikiMap. (RDoc)
+/test/ 				-	Hier kommen die ganzen Tests rein!
+/web/				- 	Eine Web-Version von WikiMap.
 
+Starten der Anwendung:
+
+- Herunterladen und installieren des Programmes 'Shoes' http://github.com/shoes/shoes/wiki .
+- Die Datei WikiMap.rb im Hauptverzeichnis mittels dem Kommando: ´shoes WikiMap.rb´ starten.
+- Have Fun!
+
+Starten der Web Version:
+
+- Das Kommando: ruby wikimap.rb im Verzeichnis /web/ ausführen.
+- Anschließend im Browser zur Adresse: 127.0.0.1:4567 navigieren.
+- Have Fun!
